--- a/index.html
+++ b/index.html
@@ -102,52 +102,49 @@
 				</div>
 
 			</section>
-			<section>
-				<div id="services">
-					<h2 class="title">Mes services</h2>
-					<div class="container">
-						<div class="service">
-							<div class="service__description">
-								<h3>Shooting photo</h3>
-								<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
-							</div>
-							<div class="service__price">
-								<h4>350€/demi journée</h4>
-								<span>Matériel, déplacement inclus</span>
-							</div>
-
+			<section id="services">
+				<h2 class="title">Mes services</h2>
+				<div class="container">
+					<div class="service">
+						<div class="service__description">
+							<h3>Shooting photo</h3>
+							<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 						</div>
-						<div class="service">
-							<div class="service__description">
-								<h3>Retouches</h3>
-								<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
-							</div>
-							<div class="service__price">
-								<h4>50€/photo</h4>
-								<span>2 AR par photo</span>
-							</div>
+						<div class="service__price">
+							<h4>350€/demi journée</h4>
+							<span>Matériel, déplacement inclus</span>
 						</div>
-						<div class="service">
-							<div class="service__description">
-								<h3>Album photos</h3>
-								<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
-							</div>
-							<div class="service__price">
-								<h4>400€ album A4</h4>
-								<span>30 pages recto/verso</span>
-							</div>
+					</div>
+					<div class="service">
+						<div class="service__description">
+							<h3>Retouches</h3>
+							<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+						</div>
+						<div class="service__price">
+							<h4>50€/photo</h4>
+							<span>2 AR par photo</span>
+						</div>
+					</div>
+					<div class="service">
+						<div class="service__description">
+							<h3>Album photos</h3>
+							<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+						</div>
+						<div class="service__price">
+							<h4>400€ album A4</h4>
+							<span>30 pages recto/verso</span>
 						</div>
 					</div>
 				</div>
-				<div class="quote">
-					<figure>
-						<blockquote>
-							<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
-						</blockquote>
-						<figcaption class="quote__author">- Richard Avedon</figcaption>
-					</figure>
-				</div>
 			</section>
+			<aside class="quote">
+				<figure>
+					<blockquote>
+						<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
+					</blockquote>
+					<figcaption class="quote__author">- Richard Avedon</figcaption>
+				</figure>
+			</aside>
 		</main>
 		<footer id="contact">
 			<div class="container">
