Essai de suppression du CSS inutilsé dans le fichier bootstrap.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
-		<title>Nina Carducci - Accueil</title>
-		<meta name="description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+		<title>Nina Carducci - Photographe portrait et évènementiel</title>
+		<meta name="description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel">
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 		<link rel="stylesheet" href="./assets/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,6 @@
 					</ul>
 				</nav>	
 			</div>
-
 			<div id="header">
 				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
@@ -34,7 +33,6 @@
 						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
-
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="photo d'un homme d'affaire de dos'">
@@ -49,7 +47,6 @@
 						</div>
 
 					</div>
-
 					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 						<span class="visually-hidden">Previous</span>
@@ -61,16 +58,14 @@
 				</div>
 			</div>
 		</header>
-
 		<main>
 			<section id="about">
 				<div class="picture left">
 					<img src="./assets/images/nina.webp" alt="portrait de Nina Carducci">
 				</div>
-
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
-					<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+					<h3 class="about-me__introduction"> Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 					<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 				</div>
