--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 		
+		<!-- Rich Snippet -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Photographe",
+			  "address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"streetAddress": "68 avenue Alsace-Lorraine"
+			  },
+			  "name": "Nina Carducci",
+			  "openingHours":"Mo-fr 10:00-19:00",
+			  "telephone": "05 56 67 78 89",
+			  "url": "https://mabuljo.github.io/Nina-Carducci/"
+			}
+		</script>
+		
+		<!-- Open Graph -->
+		<meta property="og:Nina Carducci" content="MonSiteWeb" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />
+		<meta property="og:title" content="Nina Carducci - Photographe portrait et évènementiel" />
+		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel" />
+		<meta property="og:image" content="https://mabuljo.github.io/Nina-Carducci/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" />
+
 	</head>
 
 	<body>
@@ -59,6 +85,7 @@
 				</div>
 			</div>
 		</header>
+
 		<main>
 			<section id="about">
 				<div class="picture left">
@@ -96,8 +123,8 @@
 						<figcaption class="quote__author">- Richard Avedon</figcaption>
 					</figure>
 				</div>
-
 			</section>
+
 			<section id="services">
 				<h2 class="title">Mes services</h2>
 				<div class="container">
@@ -142,6 +169,7 @@
 				</figure>
 			</aside>
 		</main>
+
 		<footer id="contact">
 			<div class="container">
 				<div class="form-container">
@@ -162,6 +190,7 @@
 				</div>
 			</div>
 		</footer>
+
 		<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="./assets/maugallery.js"></script>
