ajout de Twitter card

--- a/index.html
+++ b/index.html
@@ -15,27 +15,33 @@
 		<script type="application/ld+json">
 			{
 			  "@context": "https://schema.org",
-			  "@type": "Photographe",
+			  "@type": "LocalBusiness",
+			  "name": "Nina Carducci Photographe",
 			  "address": {
 				"@type": "PostalAddress",
 				"addressLocality": "Bordeaux",
 				"postalCode": "33200",
 				"streetAddress": "68 avenue Alsace-Lorraine"
 			  },
-			  "name": "Nina Carducci",
 			  "openingHours":"Mo-fr 10:00-19:00",
 			  "telephone": "05 56 67 78 89",
 			  "url": "https://mabuljo.github.io/Nina-Carducci/"
 			}
 		</script>
-		
+
 		<!-- Open Graph -->
-		<meta property="og:Nina Carducci" content="MonSiteWeb" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />
 		<meta property="og:title" content="Nina Carducci - Photographe portrait et évènementiel" />
 		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel" />
 		<meta property="og:image" content="https://mabuljo.github.io/Nina-Carducci/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" />
+
+		<!-- Twitter card -->
+		<meta name=”twitter:card” content=”summary” />
+		<meta name=”twitter:site” content=”@ninacarducci” />
+		<meta name=”twitter:title” content="Nina Carducci - Photographe portrait et évènementiel” />
+		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel" />
+		<meta name=”twitter:image” content=”https://mabuljo.github.io/Nina-Carducci/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp” />
 
 	</head>
 
