rajout d'une image dans le rich snippet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			  },
 			  "openingHours":"Mo-fr 10:00-19:00",
 			  "telephone": "05 56 67 78 89",
-			  "url": "https://mabuljo.github.io/Nina-Carducci/"
+			  "url": "https://mabuljo.github.io/Nina-Carducci/",
+			  "image": "https://mabuljo.github.io/Nina-Carducci/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
 			}
 		</script>
 
