--- a/index.html
+++ b/index.html
@@ -4,31 +4,14 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Nina Carducci - Photographe portrait et évènementiel</title>
-		<meta name="description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel">
-		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+		<meta name="description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel.">
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="./assets/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 		
-		<!-- Rich Snippet -->
-		<script type="application/ld+json">
-			{
-			  "@context": "https://schema.org",
-			  "@type": "LocalBusiness",
-			  "name": "Nina Carducci Photographe",
-			  "address": {
-				"@type": "PostalAddress",
-				"addressLocality": "Bordeaux",
-				"postalCode": "33200",
-				"streetAddress": "68 avenue Alsace-Lorraine"
-			  },
-			  "openingHours":"Mo-fr 10:00-19:00",
-			  "telephone": "05 56 67 78 89",
-			  "url": "https://mabuljo.github.io/Nina-Carducci/",
-			  "image": "https://mabuljo.github.io/Nina-Carducci/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-			}
-		</script>
+		
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website" />
@@ -100,7 +83,7 @@
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
-					<h3 class="about-me__introduction"> Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+					<p class="about-me__introduction"> Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 					<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 				</div>
@@ -202,5 +185,24 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="./assets/maugallery.js"></script>
 		<script src="./assets/scripts.js"></script>
+		
+		<!-- Rich Snippet -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "LocalBusiness",
+			  "name": "Nina Carducci Photographe",
+			  "address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"streetAddress": "68 avenue Alsace-Lorraine"
+			  },
+			  "openingHours":"Mo-fr 10:00-19:00",
+			  "telephone": "05 56 67 78 89",
+			  "url": "https://mabuljo.github.io/Nina-Carducci/",
+			  "image": "https://mabuljo.github.io/Nina-Carducci/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+			}
+		</script>
 	</body>
 </html>
