corrections de compression de certaines img - suppression des fichiers bootstrap inutiles

--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-		
-		
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />
 		<meta property="og:title" content="Nina Carducci - Photographe portrait et évènementiel" />
-		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel" />
+		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel." />
 		<meta property="og:image" content="https://mabuljo.github.io/Nina-Carducci/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" />
 
 		<!-- Twitter card -->
 		<meta name=”twitter:card” content=”summary” />
 		<meta name=”twitter:site” content=”@ninacarducci” />
 		<meta name=”twitter:title” content="Nina Carducci - Photographe portrait et évènementiel” />
-		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel. Par sa technique et sa sensibilité, elle saura capturer vos moments les plus précieux en photos afin d'en garder un souvenir immortel" />
+		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel." />
 		<meta name=”twitter:image” content=”https://mabuljo.github.io/Nina-Carducci/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp” />
 
 	</head>
@@ -43,7 +41,9 @@
 					</ul>
 				</nav>	
 			</div>
-			<div id="header">
+		</header>
+		<main>
+			<section id="header">
 				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
 						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -73,10 +73,8 @@
 						<span class="visually-hidden">Next</span>
 					</button>
 				</div>
-			</div>
-		</header>
+			</section>
 
-		<main>
 			<section id="about">
 				<div class="picture left">
 					<img src="./assets/images/nina.webp" alt="portrait de Nina Carducci">
@@ -121,7 +119,7 @@
 					<div class="service">
 						<div class="service__description">
 							<h3>Shooting photo</h3>
-							<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+							<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Basée à Bordeaux, je me déplace aussi en Île-de-France pour réaliser vos photos</p>
 						</div>
 						<div class="service__price">
 							<h4>350€/demi journée</h4>
@@ -185,7 +183,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="./assets/maugallery.js"></script>
 		<script src="./assets/scripts.js"></script>
-		
+
 		<!-- Rich Snippet -->
 		<script type="application/ld+json">
 			{
@@ -197,6 +195,7 @@
 				"addressLocality": "Bordeaux",
 				"postalCode": "33200",
 				"streetAddress": "68 avenue Alsace-Lorraine"
+				"addressCountry": "FR"
 			  },
 			  "openingHours":"Mo-fr 10:00-19:00",
 			  "telephone": "05 56 67 78 89",
