correction du coide de rich snippet

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 				"@type": "PostalAddress",
 				"addressLocality": "Bordeaux",
 				"postalCode": "33200",
-				"streetAddress": "68 avenue Alsace-Lorraine"
+				"streetAddress": "68 avenue Alsace-Lorraine",
 				"addressCountry": "FR"
 			  },
 			  "openingHours":"Mo-fr 10:00-19:00",
