ajout de "defer" aux scripts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />
+		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />#0000ff#85CFCE
 		<meta property="og:title" content="Nina Carducci - Photographe portrait et évènementiel" />
 		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel." />
 		<meta property="og:image" content="https://mabuljo.github.io/Nina-Carducci/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" />
@@ -179,10 +179,10 @@
 			</div>
 		</footer>
 
-		<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script src="./assets/maugallery.js"></script>
-		<script src="./assets/scripts.js"></script>
+		<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+		<script src="./assets/maugallery.js" defer></script>
+		<script src="./assets/scripts.js" defer ></script>
 
 		<!-- Rich Snippet -->
 		<script type="application/ld+json">
