--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<title>Nina Carducci - Photographe portrait et évènementiel</title>
 		<meta name="description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel.">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<link rel="stylesheet" href="./assets/style.css">
+		<link rel="stylesheet" href="./assets/style.min.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />#0000ff#85CFCE
+		<meta property="og:url" content="https://mabuljo.github.io/Nina-Carducci/" />
 		<meta property="og:title" content="Nina Carducci - Photographe portrait et évènementiel" />
 		<meta property="og:description" content="Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel." />
 		<meta property="og:image" content="https://mabuljo.github.io/Nina-Carducci/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" />
@@ -180,9 +180,9 @@
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 		<script src="./assets/maugallery.js" defer></script>
-		<script src="./assets/scripts.js" defer ></script>
+		<script src="./assets/scripts.js" defer></script>
 
 		<!-- Rich Snippet -->
 		<script type="application/ld+json">
