--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<meta name=”twitter:card” content=”summary” />
 		<meta name=”twitter:site” content=”@ninacarducci” />
 		<meta name=”twitter:title” content="Nina Carducci - Photographe portrait et évènementiel” />
-		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel." />
+		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel.` />
 		<meta name=”twitter:image” content=”https://mabuljo.github.io/Nina-Carducci/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp” />
 
 	</head>
@@ -183,8 +183,8 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-		<script src="./assets/maugallery.js"></script>
-		<script src="./assets/scripts.js"></script>
+		<script src="./assets/maugallery.min.js"></script>
+		<script src="./assets/script.min.js"></script>
 
 		<!-- Rich Snippet -->
 		<script type="application/ld+json">
