resolution d'un bug sur index.html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<!-- Twitter card -->
 		<meta name=”twitter:card” content=”summary” />
 		<meta name=”twitter:site” content=”@ninacarducci” />
-		<meta name=”twitter:title” content="Nina Carducci - Photographe portrait et évènementiel” />
+		<meta name=”twitter:title” content=`Nina Carducci - Photographe portrait et évènementiel`` />
 		<meta name=”twitter:description” content=`Nina Carducci est photographe professionnelle basée à Bordeaux, spécialisée dans les portraits et l'évènementiel.` />
-		<meta name=”twitter:image” content=”https://mabuljo.github.io/Nina-Carducci/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp” />
+		<meta name=”twitter:image” content=`https://mabuljo.github.io/Nina-Carducci/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp` />
 
 	</head>
 
